Closed Bug 405181 Opened 17 years ago Closed 17 years ago

nsIDOMNSRange.isPointInRange probably shouldn't throw WRONG_DOCUMENT_ERR

Categories

(Core :: DOM: Core & HTML, defect)

1.8 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta2

People

(Reporter: WeirdAl, Assigned: WeirdAl)

References

()

Details

Attachments

(1 file)

I don't think I was counting on isPointInRange throwing NS_ERROR_DOM_WRONG_DOCUMENT_ERR when I wrote the patch for bug 359046.  The check-in comment indicates otherwise...

Jonas, can we just eat that exception and return false?
Attached patch patchSplinter Review
Assignee: nobody → ajvincent
Status: NEW → ASSIGNED
Attachment #290343 - Flags: superreview?(jonas)
Attachment #290343 - Flags: review?(jonas)
Attachment #290343 - Flags: superreview?(jonas)
Attachment #290343 - Flags: superreview+
Attachment #290343 - Flags: review?(jonas)
Attachment #290343 - Flags: review+
Attachment #290343 - Flags: approval1.9+
Keywords: checkin-needed
Checking in content/base/src/nsRange.cpp;
/cvsroot/mozilla/content/base/src/nsRange.cpp,v  <--  nsRange.cpp
new revision: 1.225; previous revision: 1.224
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Alex, can you write a Mochitest for this?
Flags: in-testsuite?
Component: DOM: Traversal-Range → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: