Bug 405181 - "nsIDOMNSRange.isPointInRange probably shouldn't throw WRONG_DOCUMENT_ERR" [p=ajvincent@gmail.com (Alex Vincent) r+sr+a1.9=sicking]